[gd_scene load_steps=2 format=3 uid="uid://dqycsog8mad8v"]

[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="1_8lj5a"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_8lj5a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="KillsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
